Add bullet points for 국가 베이스기반 REDD+ 프로그램 개선요구 section
📋 Content Added:
1. 브라질 연방검찰청(MPF)의 파라주 정부 및 Emergent 상대 1억 8천만 달러 LEAF Coalition 계약 법적 무효화 청구 및 2억 헤알(약 3,550만 달러) 도덕적 손해배상 요구 건

2. FPIC(사전·충분한 정보 기반 동의) 절차 미이행 및 브라질 탄소시장 법령 위반 혐의 핵심 쟁점, 계약 중단 긴급명령 신청 기각 결정 (2025년 6월 11일)

3. 본안 심리 진행 중 사안, Emergent의 계약 합법성 주장 및 법리 다툼 지속 상황

🎯 Key Legal Issues Covered:
- Brazilian Federal Prosecutor's Office (MPF) legal action
- LEAF Coalition contract validity challenges
- FPIC procedure violations and carbon market law compliance
- Ongoing legal proceedings and emergency injunction status

🎨 Formatting:
- Same font hierarchy as existing 시사점 section
- Consistent 1.3rem font size with 1.7 line height
- Proper margin spacing between bullet points

--- a/carbon_market_trends_2024_2025_standalone.html
+++ b/carbon_market_trends_2024_2025_standalone.html
@@ -2848,7 +2848,9 @@
             <div class="korean-card" style="padding: 2rem;">
               <h3 style="font-size: 2rem; margin-bottom: 1.5rem;">국가 베이스기반 REDD+ 프로그램 개선요구</h3>
               <div style="font-size: 1.3rem; line-height: 1.7; margin-bottom: 2.5rem;">
-                <!-- Bullet points will be added here -->
+                <p style="margin-bottom: 1rem;">• 브라질 연방검찰청(MPF)의 파라주 정부 및 Emergent 상대 1억 8천만 달러 LEAF Coalition 계약 법적 무효화 청구 및 2억 헤알(약 3,550만 달러) 도덕적 손해배상 요구 건</p>
+                <p style="margin-bottom: 1rem;">• FPIC(사전·충분한 정보 기반 동의) 절차 미이행 및 브라질 탄소시장 법령 위반 혐의 핵심 쟁점, 계약 중단 긴급명령 신청 기각 결정 (2025년 6월 11일)</p>
+                <p style="margin-bottom: 1rem;">• 본안 심리 진행 중 사안, Emergent의 계약 합법성 주장 및 법리 다툼 지속 상황</p>
               </div>
               
               <h3 style="font-size: 2rem; margin-bottom: 1.5rem;">시사점</h3>
